mdapi/objects/TicketAvailability__c/TicketAvailability__c.object-meta.xml
<CustomObject>
    <label>Offerta</label>
    <nameField>
        <displayFormat>Offerta-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offerte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>