mdapi/objects/TicketAvailability__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Codice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>