mdapi/objects/TicketAvailability__c/fields/EndValidity__c.field-meta.xml
<CustomField>
    <fullName>EndValidity__c</fullName>
    <label>Fine Validità</label>
    <type>DateTime</type>
</CustomField>