mdapi/objects/TicketAvailability__c/fields/InvoicingCode__c.field-meta.xml
<CustomField>
    <fullName>InvoicingCode__c</fullName>
    <label>Codice Fatturazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>