mdapi/objects/TicketAvailability__c/fields/InvoicingType__c.field-meta.xml
<CustomField>
    <fullName>InvoicingType__c</fullName>
    <label>Tipologia Fatturazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fattura</fullName>
                <default>true</default>
                <label>Fattura</label>
            </value>
            <value>
                <fullName>Scontrino</fullName>
            </value>
            <value>
                <fullName>Ricevuta</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>