mdapi/objects/TicketAvailability__c/fields/IsFree__c.field-meta.xml
<CustomField>
    <fullName>IsFree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gratuito</label>
    <type>Checkbox</type>
</CustomField>