mdapi/objects/TicketAvailability__c/fields/IssuanceType__c.field-meta.xml
<CustomField>
    <fullName>IssuanceType__c</fullName>
    <label>Tipologia Emissione</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TicketType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>IssuanceType</valueSetName>
    </valueSet>
</CustomField>