mdapi/objects/TicketAvailability__c/fields/NumberUses__c.field-meta.xml
<CustomField>
    <fullName>NumberUses__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Numero Utilizzi</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>