mdapi/objects/TicketAvailability__c/fields/OfferExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OfferExpirationDate__c</fullName>
    <label>Data Scadenza Offerta</label>
    <required>true</required>
    <type>Date</type>
</CustomField>