mdapi/objects/TicketAvailability__c/fields/PriceDiscounted__c.field-meta.xml
<CustomField>
    <fullName>PriceDiscounted__c</fullName>
    <label>Prezzo Scontato</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>