mdapi/objects/TicketAvailability__c/fields/PriceFull__c.field-meta.xml
<CustomField>
    <fullName>PriceFull__c</fullName>
    <label>Prezzo Intero</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>