mdapi/objects/TicketAvailability__c/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spettacolo</label>
    <referenceTo>Show__c</referenceTo>
    <relationshipName>Biglietti</relationshipName>
    <type>Lookup</type>
</CustomField>