mdapi/objects/TicketAvailability__c/fields/SubscriptionName__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionName__c</fullName>
    <label>Nome Abbonamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>