mdapi/objects/TicketAvailability__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biglietto</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipName>TicketAvailabilities</relationshipName>
    <type>Lookup</type>
</CustomField>