mdapi/objects/TicketAvailability__c/fields/TicketType__c.field-meta.xml
<CustomField>
    <fullName>TicketType__c</fullName>
    <label>Tipologia Offerta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TicketType</valueSetName>
    </valueSet>
</CustomField>