mdapi/objects/TicketAvailability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TicketType__c</columns>
    <columns>IssuanceType__c</columns>
    <columns>PaymentType__c</columns>
    <columns>Show__c</columns>
    <columns>Structure__c</columns>
    <columns>Partner__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Ticket</label>
</ListView>